# django-tinyblog

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
tinyblog/: apps.py  forms.py  models.py  urls.py  views.py
tinyblog/templates/tinyblog/: _base.html  article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
